Fix background on overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,7 @@ body {
   overflow-y: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background-attachment: fixed;
 }
 
 body::-webkit-scrollbar {
